# translator

./: .gitignore  check_assets.py  check_error.py  check_gh.py  download_jdk.py  fetch_logs.py  fetch_vosk.py  generate_keystore.bat  get_logs.py  index.html  settings.gradle
.github/workflows/: build.yml  generate-key.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  SentencePieceProcessorInterface.cpp
app/src/main/java/com/magne/translator/: LanguageSelectActivity.kt  MainActivity.java  MainActivity.kt  ModelDownloadManager.kt  NLLBManager.kt  TranslatorActivity.kt  TranslatorManager.kt  UpdateManager.kt  VoskModelManager.kt  WhisperManager.kt
app/src/main/java/com/magne/translator/usb/: UsbCommandManager.kt
app/src/main/java/com/magne/translator/utils/: SentencePieceProcessorJava.java
app/src/main/res/color/: color_btn_text.xml
app/src/main/res/drawable/: bg_btn_start.xml  bg_lang_card.xml
app/src/main/res/layout/: activity_language_select.xml  activity_main.xml  activity_translator.xml  bottom_sheet_languages.xml  dialog_update.xml  item_language.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: provider_paths.xml  usb_device_filter.xml
